@@ -1,3 +1,8 @@
+Fri Oct 29 18:52:38 1999  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm.c (thumb_expand_prologue): Emit a USE of the
+	scratch low register so that it will not be deleted.
+
 Fri Oct 29 15:23:48 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/pe.h (ARM_PE): Define.
